--- a/manifest.json
+++ b/manifest.json
@@ -14,9 +14,12 @@
       "128": "images/icon-128.png"
     }
   },
+  "background": {
+    "service_worker": "background.js"
+  },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": ["http://*/*", "https://*/*"],
       "js": ["content.js"]
     }
   ],
@@ -27,5 +30,5 @@
     "128": "images/icon-128.png"
   },
 
-  "permissions": ["scripting", "activeTab", "storage"]
+  "permissions": ["activeTab", "tabs", "storage", "scripting"]
 }
